--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
     <title>Administración Escolar</title>
 </head>
 <body>
-    <h1>It works!</h1>
+    <header class="header">
+        <h1 class="header__title">Instituto Alabama</h1>
+        <p class="header__slogan">Unidos por la excelencia académica y ética</p>
+        <nav class="navbar">
+            <ul>
+                <li><a class="navbar__link" href="#">Inicio</a></li>
+                <li><a class="navbar__link" href="#">Quiénes somos</a></li>
+                <li><a class="navbar__link" href="#">Oferta educativa</a></li>
+                <li><a class="navbar__link" href="#">Requisitos de inscripción</a></li>
+                <li><a class="navbar__link" href="#">Accesso</a></li>
+                <li><a class="navbar__link" href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <div class="slider">
+            
+        </div>
+    </main>
 </body>
 </html>
